@@ -1,3 +1,8 @@
+2007-09-22  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-11-02
+	* integrate configuration parser with GUI
+
 2007-09-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-11-01
